ROS2/log/build_2024-05-02_16-44-13/tf_converter/stderr.log
  File "/home/xs/UAV/ROS2/install/tf_converter/lib/python3.8/site-packages/tf_converter/tf_converter.py", line 94
    dft_offset =
                ^
SyntaxError: invalid syntax

